--- a/style.css
+++ b/style.css
@@ -53,6 +53,16 @@
     align-items: center;
 }
 
+#finish {
+    background-color: green;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    opacity: 80%;
+    justify-content: center;
+    align-items: center;
+}
+
 #output {
     display: flex;
     overflow-x: auto;
